deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: musicfeed
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
        - path: /api(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: api-service
              port:
                number: 80
        - path: /diagnostics(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: diagnostics-service
              port:
                number: 80
